[package]
name = "lumenflow-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
config = "0.15"
